--- a/client/src/pages/home/HomePage.css
+++ b/client/src/pages/home/HomePage.css
@@ -24,6 +24,8 @@
   flex-direction: column;
   width: 85.6rem;
   
+margin-top: 4.4rem;
+
   /*margin-left: 2rem;*/
   
   /*position:relative;*/
